--- a/src/components/css/Register.css
+++ b/src/components/css/Register.css
@@ -1,23 +1,25 @@
-.register_container{
+.register_container {
     height: 100vh;
     width: 100%;
     display: flex;
-    background-color: var(--rosa);
+    background-color: var(--lightRosa);
 }
 
-.BelieTitulo{
+.BelieTitulo {
     margin-top: 2rem;
     font-size: 10rem;
     font-family: var(--belieFont);
 }
-.BelieSubtitulo{
+
+.BelieSubtitulo {
     font-family: var(--joseSlab);
 }
 
-.register_form{
+.register_form {
     width: 50%
 }
-.register_blob{
+
+.register_blob {
     width: 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -25,32 +27,43 @@
 }
 
 
-.cardForm{
+.cardForm {
     display: block;
     width: 80%;
     margin: 10% auto 0 auto;
 }
 
-form{
+.registerForm {
     margin-top: 2rem;
-    border: solid 3px var(--nude);
+    border: solid 3px var(--lightNude);
     padding: 2rem;
     width: 90%;
     margin: 0 auto;
+    border-radius: 5%;
 }
-form hr{
+
+.register_form h1 {
+    background-color: var(--blanco);
+    width: fit-content;
+    display: block;
+    padding: 0.5rem 1rem;
+}
+
+.registerForm hr {
     border: none;
-    border-top: solid 3px var(--nude);
+    border-top: solid 3px var(--lightNude);
     width: 100%;
     margin: 0 auto;
     padding-bottom: 1rem;
 }
-form p{
-    margin-bottom: 4rem;
+
+.registerForm p {
+    padding: 1rem 0;
+    margin-bottom: 3rem;
     font-size: 1.8rem;
 }
 
-form div{
+.registerForm div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -58,7 +71,22 @@ form div{
     margin: 2.5rem auto;
 }
 
-.row label{
+.logError {
+    width: 80%;
+    padding: 1rem;
+    
+    background-color: var(--lightNaranja);
+    border: solid 3px darkred;
+    color: var(--negro);
+    border-radius: 7px;
+}
+
+.logError span {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.row label {
     font-size: 1.5rem;
     width: 100%;
     text-align: left;
@@ -66,40 +94,53 @@ form div{
     margin-bottom: 0.5rem;
 }
 
-.row input{
+.rowInput {
     padding: 1rem 1rem;
     width: 100%;
-    border: solid 3px var(--violeta);
+    border: solid 3px var(--lightVioleta);
+    background-color: var(--blanco);
     border-radius: 7px;
     outline: none;
     line-height: 2.5rem;
     font-size: 2rem;
 }
 
-.row span{
+.inputError {
+    padding: 1rem 1rem;
+    width: 100%;
+    border-radius: 7px;
+    outline: none;
+    line-height: 2.5rem;
+    font-size: 2rem;
+    border: solid 3px darkred;
+}
+
+.row span {
     width: 100%;
     text-align: left;
     margin-left: 2rem;
     margin-bottom: 0.5rem;
-    color: var(--marron)
+    color: darkred;
 }
 
-input::placeholder{
+input::placeholder {
     color: #999;
 }
-input:hover{
-    border: solid 3px var(--naranja);
+
+input:hover {
+    border: solid 3px var(--lightNaranja);
 }
-input:focus{
+
+input:focus {
     outline: none;
     border: solid 3px var(--marron);
 }
 
-.submit{
+
+.submit {
     width: 50%;
     padding: 2rem 1rem;
-    background-color: var(--verde);
-    border: solid 1px var(--verde);
+    background-color: var(--lightVerde);
     font-size: 2rem;
     font-weight: 900;
     color: var(--negro);
@@ -108,34 +149,75 @@ input:focus{
     border: solid 3px #BADBC0;
 }
 
-.submit:hover{
+.submit:hover {
     background-color: #BADBC0;
 }
 
 @media only screen and (max-width: 768px) {
 
-    .register_blob{
+    .register_blob {
         display: none;
     }
-    .register_form{
+
+    .register_form {
         width: 100%;
     }
-    .cardForm{
+
+    .cardForm {
         width: 100%;
     }
-    .cardForm{
+
+    .cardForm {
         width: 100%;
         padding: 1rem;
         margin: 0;
     }
 
-    .row label , .row input{
+    .row label,
+    .row input {
         line-height: 1.2rem;
         font-family: 1rem;
     }
 
-    .submit{
+    .submit {
         padding: 1rem;
+    }
+
+}
+
+@media only screen and (max-width: 376px) {
+
+    .register_form {
+        width: 100%;
+    }
+
+    .cardForm {
+        width: 100%;
+    }
+
+    .cardForm {
+        width: 100%;
+        padding: 0.5rem 1rem;
+        margin: 0;
+    }
+
+    .registerForm p {
+        margin-bottom: 1rem;
+    }
+
+    .registerForm hr {
+        display: none;
+    }
+
+    .row label,
+    .row input {
+        line-height: 1rem;
+        font-family: 0.8rem;
+    }
+
+    .submit {
+        padding: 1rem;
+        width: fit-content;
     }
 
 }
