--- a/src/components/css/Register.css
+++ b/src/components/css/Register.css
@@ -1,3 +1,7 @@
+
+
+/*COMPONENTES LOGIN Y REGISTER TOMAN ESTA HOJA DE ESTILOS*/
+
 .register_container {
     height: 100vh;
     width: 100%;
@@ -29,7 +33,6 @@
 
 .cardForm {
     display: block;
-    width: 80%;
     margin: 10% auto 0 auto;
 }
 
