--- a/src/components/css/EditProducto.css
+++ b/src/components/css/EditProducto.css
@@ -1,11 +1,12 @@
 .modalEdit {
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.9);
     position: fixed;
     z-index: 1;
     transition: all 0.5s ease-in-out;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+
 }
 
 .displayOn{
@@ -19,4 +20,39 @@
     width: 50%;
     margin: 0 auto;
     background-color: #777;
+    box-shadow: var(--sombraBasica);
+}
+.rowCheckBox{
+    display: flex;
+}
+.rowCheckBoxInput{
+    width: 3rem;
+    height: 3rem;
+    margin: 0 1rem;
+}
+.errorChk{
+   color:  darkred;
+}
+.rowCheckBox label{
+    height: 3rem;
+    line-height: 3rem;
+}
+.rowCheckBox span {
+    width: 100%;
+    margin-left: 2rem;
+    margin-bottom: 0.5rem;
+    color: darkred;
+}
+
+.submit:disabled{
+    border: solid 3px #AAA;
+    color: #777;
+    background-color: var(--nude);
+    text-decoration:line-through
+}
+
+.imgCat{
+    display: block;
+    max-width: 200px;
+    max-height: 200px;
 }
