--- a/src/components/css/Register.css
+++ b/src/components/css/Register.css
@@ -66,7 +66,7 @@
     font-size: 1.8rem;
 }
 
-.registerForm div {
+.registerForm > div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -99,7 +99,6 @@
 
 .rowInput {
     padding: 1rem 1rem;
-    width: 100%;
     border: solid 3px var(--lightVioleta);
     background-color: var(--blanco);
     border-radius: 7px;
