--- a/src/components/css/Register.css
+++ b/src/components/css/Register.css
@@ -105,6 +105,7 @@
     outline: none;
     line-height: 2.5rem;
     font-size: 2rem;
+    width: 100%;
 }
 
 .inputError {
@@ -137,7 +138,16 @@ input:focus {
     outline: none;
     border: solid 3px var(--marron);
 }
+input[type="file"] {
+   width: 100%;
 
+}
+
+.uploadImg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
 
 .submit {
     width: 50%;
