--- a/src/components/css/CardCat.css
+++ b/src/components/css/CardCat.css
@@ -69,3 +69,14 @@
     }
 
 }
+
+@media only screen and (max-width: 378px) {
+
+    .cardCat{
+        height: 300px;
+    }
+    .cardCat_body{
+        top: 85%;
+    }
+
+}
