--- a/src/components/css/Portada.css
+++ b/src/components/css/Portada.css
@@ -120,3 +120,57 @@
         color: var(--negro);
     }
 }
+
+@media only screen and (max-width: 400px) {
+
+    .videoH {
+        display: none;
+    }
+
+    .videoV {
+        display: block;
+        object-fit: cover;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .portada_textos {
+        
+        top: 5%;
+        left: 20%;
+        margin-right: 7%;
+        padding: 2rem;
+        
+    }
+
+    .portada_textos > h1 {
+        font-size: 3rem;
+    }
+
+    .portada_textos > p {
+        font-size: 2.4rem;
+        margin-top: 5%;
+        line-height: 3rem;
+        
+
+    }
+    .portada_textos > div{
+        padding: 0;
+        justify-content: center;
+    }
+    .portada_btn_catalogo {
+        background-color: var(--marron);
+        border: solid 3px var(--lightNaranja);
+        font-size: 1.8rem;
+        font-weight: 700;
+        color: var(--negro);
+        padding: 1rem;
+        transition: background-color 0.5s ease-in-out;
+    }
+    
+    .portada_btn_catalogo:hover {
+        background-color: var(--lightNaranja);
+        border: solid 3px var(--marron);
+        color: var(--negro);
+    }
+}
