--- a/src/components/css/CardList.css
+++ b/src/components/css/CardList.css
@@ -1,4 +1,3 @@
-
 /* CardList = Usada en Textil y Difu */
 
 .cardList {
@@ -95,7 +94,7 @@
 
 }
 
-.cardList_body_textos p {
+.cardList_body_textos>p {
     margin-top: 1rem;
     padding: 0 0.5rem;
     font-size: 2rem;
@@ -115,7 +114,35 @@
 }
 
 .cardList_footer {
-    height: 1rem;
+    height: 1.5rem;
     width: 100%;
 
+}
+
+@media only screen and (max-width: 768px) {
+
+    .modalContent {
+        width: 70%;
+    }
+
+}
+
+
+@media only screen and (max-width: 378px) {
+
+    .cardList {
+        width: 70%;
+    }
+
+
+    .cardList_body_textos>p {
+        margin-top: 1rem;
+        padding: 0 0.5rem;
+        font-size: 2.5rem;
+    }
+    .cardList_footer {
+        height: 2rem;
+        width: 100%;
+    
+    }
 }
