--- a/src/components/css/CardShort.css
+++ b/src/components/css/CardShort.css
@@ -32,44 +32,17 @@
     padding: 0 1.5rem;
 }
 
-.cardEdit {
-    display: block;
-    position: absolute;
-    top: 5%;
-    right: 5%;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
 
-.cardEdit i {
-    background-color: var(--marron);
-    color: var(--lightNude);
-    padding: 1rem;
-    border-radius: 50%;
-    box-shadow: var(--sombraBasica);
-    transition: transform 0.3s ease-in-out;
-}
+@media only screen and (max-width: 378px) {
 
-i:hover {
-    background-color: var(--lightNaranja);
-    color: var(--negro);
-    transform: scale(1.1);
-}
+    .cardShort {
+        width: 70%;
+    }
 
-.backToCat {
-    text-decoration: none;
-    color: var(--negro);
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: right;
-    background-color: var(--lightNude);
-    padding: 2rem;
-    transition: background-color 0.3s ease-in;
-    border-radius: 5%;
-}
-
-.backToCat:hover {
-    color: var(--blanco);
-    background-color: var(--negro);
+    .cardShort_body > h2 {
+        font-size: 3.5rem;
+    }
+    .cardShort_body > p {
+        font-size: 2rem;
+    }
 }
