--- a/src/components/css/EditModal.css
+++ b/src/components/css/EditModal.css
@@ -30,3 +30,22 @@
     height: 100px;
     object-fit: cover;
 }
+
+
+@media only screen and (max-width: 768px) {
+
+.modalContent{
+    width: 70%;
+}
+
+}
+
+
+@media only screen and (max-width: 378px) {
+
+    .modalContent{
+        width: 90%;
+    }
+
+
+}
