--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -6,7 +6,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    background-color: var(--lightRosa);
+    background-color: var(--mistyRose);
     padding-bottom: 1rem;
 }
 
