--- a/public/css/belie.css
+++ b/public/css/belie.css
@@ -134,6 +134,10 @@ hr {
 }
 
 /*Margin y Padding*/
+.mt2 {
+  margin-top: 2rem;
+}
+
 .mb4 {
   margin-bottom: 4rem;
 }
@@ -141,6 +145,12 @@ hr {
 .p2 {
   padding: 2rem;
 }
+
+.p2v {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 
 .p2h {
   padding-left: 2rem;
@@ -155,6 +165,10 @@ hr {
 
 .flex-row {
   flex-direction: row;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .space_between {
@@ -245,6 +259,12 @@ hr {
   background-size: cover;
   background-attachment: fixed;
 }
+.bg_blob_nude {
+  background-image: url(../img/bgBlobNude.svg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 
 /*Header*/
 header {
@@ -385,9 +405,11 @@ a:visited {
   margin-top: 6rem;
 }
 .renovation_textos {
-  margin-top: 5rem;
+  margin-top: 12.5%;
   padding: 2rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 .renovation_textos h1,
 p {
@@ -407,8 +429,9 @@ p {
 }
 .renovation_Logo img {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 70%;
+  margin: 0 auto;
+  max-height: 70%;
   object-fit: cover;
 }
 
@@ -632,12 +655,12 @@ i:hover {
   .renovation{
     padding-top: 2.5rem;
   }
+  .renovation_textos {
+    margin-top: 5rem;
+  }
   .renovation_textos p {
     width: 70%;
     padding-top: 1rem;
-  }
-  .renovation_Logo {
-    margin: 0 auto;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -648,6 +671,7 @@ i:hover {
   body {
     font-size: 1.6rem;
   }
+  
 
   .header_banner_textos {
     top: 20%;
@@ -672,16 +696,16 @@ i:hover {
   .submit {
     padding: 1rem;
   }
+
   .renovation{
     margin-top: 2rem;
+    background-size: 120% auto;
   }
   .renovation_textos{
     margin-top: 2rem;
   }
-  .renovation_Logo {
-    display: none;
-    width: 30%;
-    margin: 4rem auto;
+  .renovation_textos h1{
+    margin-top: 2rem;
   }
 }
 
@@ -729,11 +753,22 @@ i:hover {
     background-position: center top;
     background-size: 100% auto;
     background-repeat: no-repeat;
-    padding-top: 15%;
   }
   .renovation_textos{
+    padding-top: 0;
     margin-top: 5rem;
+    font-size: 120%;
   }
+  .renovation_textos h1{
+    padding-top: 5%;
+    margin-top: 5rem;
+    font-size: 120%;
+  }
+  .renovation_Logo {
+    width: 50%;
+    margin: 1rem auto;
+  }
+
 }
 
 @media only screen and (max-width: 378px) {
@@ -764,14 +799,20 @@ i:hover {
     padding: 1rem;
     width: fit-content;
   }
+  .renovation_textos {
+    font-size: 130%;
+    margin-top: 20%;
+  }
   .renovation_textos p{
     margin-top: 5rem;
   }
-
   .catalogo_textos {
     margin: 0 auto 3rem auto;
     padding: 3rem 10%;
   }
   
-
+  .renovation_Logo {
+    width: 100%;
+    margin: 3rem auto;
+  }
 }
